--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leader Board</title>
+    <!-- font awsam -->
+    <script src="https://kit.fontawesome.com/3228257fa2.js" crossorigin="anonymous"></script>
     <!-- stylesheet -->
     <link rel="stylesheet" href="style/style.css">
 </head>
@@ -50,12 +52,134 @@
 
                 </div>
             </div>
+            <hr>
+            <div class="top-blogs">
+                <h2 class="section-title">Top Blog</h2>
+                <div class="blogs">
+                    <artical class="blog">
+                        <div class="thumbnail">
+                            <img src="./images/blogs/blog-1.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favorite Ui/UX Goodies</h3>
+                            <p class="blog-author">By <a href="">Danny Sapio</a> </p>
+                        </div>
+                    </artical>
+                    <artical class="blog">
+                        <div class="thumbnail">
+                            <img src="./images/blogs/blog-2.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favorite Ui/UX Goodies</h3>
+                            <p class="blog-author">By <a href="">Danny Sapio</a> </p>
+                        </div>
+                    </artical>
+                    <artical class="blog">
+                        <div class="thumbnail">
+                            <img src="./images/blogs/blog-3.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favorite Ui/UX Goodies</h3>
+                            <p class="blog-author">By <a href="">Danny Sapio</a> </p>
+                        </div>
+                    </artical>
+                    <artical class="blog">
+                        <div class="thumbnail">
+                            <img src="./images/blogs/blog-4.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favorite Ui/UX Goodies</h3>
+                            <p class="blog-author">By <a href="">Danny Sapio</a> </p>
+                        </div>
+                    </artical>
+                </div>
+            </div>
+
+        </section>
+
+        <!-- latest Cources -->
+
+        <section class="container">
+            <h2 class="section-title">Latest Cources</h2>
+            <div class="courses">
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="./images/courses/course-1.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">React - The Complete Guide 2022</h3>
+                        <p class="course-author">Reed Krakoff.</p>
+                    </div>
+                    <div class="course-info">
+                        <div>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star empty"></i>
+
+                        </div>
+                        <p>4.5</p>
+
+                        <div class="course-duration">
+                            <i class="far fa-clock"></i>
+                            01:30hr
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="./images/courses/course-2.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">React - The Complete Guide 2022</h3>
+                        <p class="course-author">Reed Krakoff.</p>
+                    </div>
+                    <div class="course-info">
+                        <div>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star empty"></i>
+                        </div>
+                        <p>4.5</p>
+
+                        <div class="course-duration">
+                            <i class="far fa-clock"></i>
+                            01:30hr
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="./images/courses/course-3.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">React - The Complete Guide 2022</h3>
+                        <p class="course-author">Reed Krakoff.</p>
+                    </div>
+                    <div class="course-info">
+                        <div>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star filled"></i>
+                            <i class="fas fa-star empty"></i>
+
+                        </div>
+                        <p>4.5</p>
+
+                        <div class="course-duration">
+                            <i class="far fa-clock"></i>
+                            01:30hr
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </section>
     </main>
-
-
-
 </body>
 
 </html>
